[gd_scene load_steps=8 format=3 uid="uid://0wenwmyc16cn"]

[ext_resource type="Texture2D" uid="uid://t6j7jwf5ovq2" path="res://assets/sprites/tiles/block_selection.png" id="1_478t2"]
[ext_resource type="Script" path="res://scripts/tiles/tile_marker.gd" id="2_inedu"]

[sub_resource type="Animation" id="Animation_i8q4b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kpjd8"]
resource_name = "blocked"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_1xnmc"]
resource_name = "flicker"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_mj7qb"]
resource_name = "targeted"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h5r5f"]
_data = {
"RESET": SubResource("Animation_i8q4b"),
"blocked": SubResource("Animation_kpjd8"),
"selected": SubResource("Animation_1xnmc"),
"targeted": SubResource("Animation_mj7qb")
}

[node name="TileMarker" type="Sprite2D" node_paths=PackedStringArray("animation_player")]
texture = ExtResource("1_478t2")
hframes = 2
vframes = 3
script = ExtResource("2_inedu")
animation_player = NodePath("AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h5r5f")
}
speed_scale = 0.75

[node name="ClickableArea" type="Area2D" parent="."]

[node name="ClickableShape" type="CollisionPolygon2D" parent="ClickableArea"]
position = Vector2(0, -4)
polygon = PackedVector2Array(0, 7, 14, 0, 0, -8, -14, 0)

[connection signal="input_event" from="ClickableArea" to="." method="_on_input_event"]
[connection signal="mouse_entered" from="ClickableArea" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ClickableArea" to="." method="_on_mouse_exited"]
